refactor: Use meaningful loop variable names
- Add guideline to CLAUDE.md about meaningful loop counter names
- Rename 'i' to 'dateIndex' in GoalService streak calculation
- Rename 'i' to 'dateIndex' in GoalGuardianService streak calculation

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>